# hudiy

./: README.md  environment_variables.md  main_configuration.md  raspberry_pi.md  x86_64.md
api/: Api.proto
config/: applications.json  applications_menu.json  dashboards.json  main_configuration.json  overlays.json  shortcuts.json
examples/: README.md  analog_clock.html  camera.html  input_scope.html  template.html
examples/api/js/: date_time.html  gauges.html  go_back.html  go_back_web.html  go_forward_web.html  media.html  navigation.html  obd_widget.html  speedo.html  tacho.html
examples/api/python/: AndroidAutoDayNight.py  AudioFocusDuck.py  AudioFocusPlay.py  AudioFocusTransient.py  AutoboxDayNight.py  Coverarts.py  CustomOverlayVisibility.py  DarkMode.py  DispatchAction.py  EqualizerPreset.py  Hello.py  HelloWebSocket.py  KeyStrokes.py  MediaData.py  NavigationStatus.py  Notification.py  ObdQuery.py  PhoneStatus.py  ProjectionStatus.py  ReverseCamera.py  Shutdown.py  StatusIcon.py  Toast.py  ToggleDashboards.py  Volume.py  VolumeOverlayVisibility.py  requirements.txt
examples/external_display/: README.md
examples/external_display/autostart/: README.md  (+6 more)
examples/external_display/pico2/src/external_display/: CMakeLists.txt  external_display.cpp  tusb_config.h  tusb_device_descriptors.inl
examples/gpio/: DarkMode.py  KeyStrokes.py  README.md  ReverseCamera.py  Volume.py  VolumeButtons.py  VolumeRotaryEncoder.py
examples/idle_screen/: README.md  idle_screen.py
examples/obd_charts/: README.md  charts.py  charts_mock.py
i18n/: README.md  hudiy.ts
(+52 files in other folders)
